# metal

./: .gitignore  CMakeLists.txt  Metal.cpp  Metal.h  main.cpp
abstract/: Function.cpp  Function.h  FunctionHolder.cpp  FunctionHolder.h  Holder.h
functions/: CountFunction.cpp  CountFunction.h  PrintFunction.cpp  PrintFunction.h  SayHelloFunction.cpp  SayHelloFunction.h
holders/: ArrayFunctionHolder.cpp  ArrayFunctionHolder.h  ArrayHolder.cpp  ArrayHolder.h  ArrayHolder.hpp
